@@ -208,6 +208,8 @@ map {
 }
 EOF
 
+    chmod 0500 ${DOVECOT_REALTIME_QUOTA_CONF}
+
     # Create MySQL database ${IREDADMIN_DB_USER} and table 'used_quota'
     # which used to store realtime quota.
     if [ X"${BACKEND}" == X"OPENLDAP" -a X"${USE_IREDADMIN}" != X"YES" ]; then
@@ -225,9 +227,8 @@ FLUSH PRIVILEGES;
 EOF
 
     fi
-    # ---- real time dict quota ----
 
-    # ---- IMAP shared folder ----
+    # IMAP shared folder
     if [ X"${DOVECOT_VERSION}" == X"1.2" ]; then
         backup_file ${DOVECOT_SHARE_FOLDER_CONF}
 
@@ -287,6 +288,7 @@ map {
     }
 }
 EOF
+        chmod 0500 ${DOVECOT_SHARE_FOLDER_CONF}
 
         # Create MySQL database ${IREDADMIN_DB_USER} and table 'share_folder'
         # which used to store realtime quota.
@@ -304,9 +306,7 @@ GRANT SELECT,INSERT,UPDATE,DELETE ON ${IREDADMIN_DB_NAME}.* TO "${IREDADMIN_DB_U
 FLUSH PRIVILEGES;
 EOF
         fi
-
     fi
-    # ---- IMAP shared folder ----
 
     ECHO_DEBUG "Copy sample sieve global filter rule file: ${DOVECOT_GLOBAL_SIEVE_FILE}.sample."
     cp -f ${SAMPLE_DIR}/dovecot.sieve ${DOVECOT_GLOBAL_SIEVE_FILE}.sample
